--- a/src/app/admin/pages/gestionar-medicos/editar-medico/editar-medico.component.html
+++ b/src/app/admin/pages/gestionar-medicos/editar-medico/editar-medico.component.html
@@ -53,7 +53,7 @@
               </div>
            
               <div class="form-group col-md-6 mb-3">
-                <label for="titulos">Titulos</label>
+                <label for="titulos">Especialidad medica</label>
                 <input type="text" class="form-control" id="titulo" formControlName="titulo" placeholder="titulo">
               </div>
          
