--- a/src/app/admin/pages/gestionar-medicos/gestiona-medicos/gestionar-medicos.component.scss
+++ b/src/app/admin/pages/gestionar-medicos/gestiona-medicos/gestionar-medicos.component.scss
@@ -3,3 +3,13 @@
     vertical-align: middle; /* Ajusta la alineación vertical según tus preferencias */
     margin-right: 10px; /* Puedes ajustar el margen según tus preferencias */
   }
+
+  .cursor {
+    cursor: pointer;
+}
+
+.icon-delete {
+  margin-right: 15px; /* o el valor que desees para la separación */
+}
+
+
