--- a/src/app/admin/pages/gestionarCitasMedicas/agregar-cita-medica/agregar-cita-medica.component.html
+++ b/src/app/admin/pages/gestionarCitasMedicas/agregar-cita-medica/agregar-cita-medica.component.html
@@ -1,56 +1,56 @@
-<div class="container mt-5">
-    <div class="row justify-content-center">
-      <div class="col-md-8">
-        <h2 class="text-center mb-4">Formulario de Registro de Cita Médica</h2>
-        <form [formGroup]="formulario" (ngSubmit)="crearCita()">
-          <div class="form-group mb-3">
-            <label for="motivo">Motivo de la Cita</label>
-            <input type="text" class="form-control" id="motivo" formControlName="motivo" placeholder="Motivo">
-          </div>
-          <select class="form-control mb-3" id="rut_paciente" formControlName="rut_paciente">
-            <option *ngFor="let paciente of pacientes" [value]="paciente.rut">{{ paciente.nombre }}</option>
-        </select>
-        
-        <!-- Para Rut del Médico -->
-        <select class="form-control mb-3" id="rut_medico" formControlName="rut_medico">
-          <option [value]="null">Selecciona un médico</option>
-          <option *ngFor="let medico of medicos" [value]="medico.id">{{ medico.nombre }} (RUT: {{ medico.id }})</option>
-        </select>
 
-<select class="form-control mb-3" id="tipoCita" formControlName="idTipoCita">
-  <option *ngFor="let tipoCita of tiposCita" [value]="tipoCita.idTipo">{{ tipoCita.tipo_cita }}</option>
-</select>
+<div class="alert alert-warning" role="alert">
+  Si no tienes medicos registrados en la aplicación o no sabes qué días trabajan tus médicos 
+  <a href="/gestionar-horarios-medicos" class="btn btn-info">revisa los horarios aquí</a>
+</div>
+
+<form (ngSubmit)="guardarCita()">
+
+  <!-- Motivo de la cita -->
 
 
-          <div class="form-row mb-3">
-            <div class="form-group col-md-6 mb-3">
-              <label for="fecha">Fecha de la Cita</label>
-              <input type="date" class="form-control" id="fecha" formControlName="fecha">
-            </div>
-            <div class="form-group col-md-6 mb-3">
-              <label for="horaInicio">Hora de Inicio</label>
-              <input type="time" class="form-control" id="horaInicio" formControlName="hora_inicio">
-            </div>
-          </div>
-          <div class="form-row mb-3">
-            <div class="form-group col-md-6 mb-3">
-              <label for="horaFin">Hora de Fin</label>
-              <input type="time" class="form-control" id="horaFin" formControlName="hora_fin">
-            </div>
-            <div class="form-group col-md-6 mb-3">
-              <label for="estado">Estado</label>
-              <select class="form-control" id="estado" formControlName="estado">
+  <div class="form-group mb-3">
+    <label for="paciente">Paciente</label>
+    <select class="form-control" id="paciente" [(ngModel)]="selectedPaciente" name="paciente">
+      <option value="" disabled>Seleccione un paciente</option>
 
-              </select>
-            </div>
-          </div>
-          <div class="form-group mb-3">
-            <label for="descripcion">Descripción</label>
-            <textarea class="form-control" id="descripcion" formControlName="descripcion" rows="3" placeholder="Descripción"></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary btn-block">Registrar Cita Médica</button>
-        </form>
-      </div>
-    </div>
+      <option *ngFor="let paciente of pacientes" [value]="paciente.rut">{{ paciente.nombre }} {{ paciente.apellido }}</option>
+    </select>
   </div>
+  <div class="form-group mb-3">
+    <label for="tipoCita">Tipo de cita</label>
+    <select class="form-control" id="tipoCita" [(ngModel)]="selectedTipoCita" (change)="onTipoCitaChange($event)" name="tipoCita">
+      <option *ngFor="let tipo of tiposCitax" [value]="tipo">{{ tipo }}</option>
+    </select>
+  </div>
+  <div class="form-group mb-3" *ngIf="selectedTipoCita === 'Especialidad médica'">
+    <label for="especialidad">Especialidad</label>
+    <select class="form-control" id="especialidad" [(ngModel)]="selectedEspecialidad" (change)="onChangeData()" name="especialidad">
+      <option value="" disabled selected>Seleccione una especialidad</option> <!-- Esta es la línea agregada -->
+      <option *ngFor="let especialidad of especialidades" [value]="especialidad.especialidad_medica">{{ especialidad.especialidad_medica }}</option>
+    </select>
+</div>
+
   
+<div class="form-group mb-3">
+  <label for="fecha">Fecha de cita</label>
+  <input type="date" class="form-control" id="fecha" [(ngModel)]="selectedDate" (change)="onChangeData()" name="fecha">
+</div>
+
+  
+  <div class="form-group mb-3" *ngIf="medicosDisponibles && medicosDisponibles.length">
+    <label for="medico">Médicos disponibles</label>
+    <select class="form-control" id="medico" [(ngModel)]="selectedMedico" name="medico" (change)="onMedicoSelected($event)">
+      <option *ngFor="let medico of medicosDisponibles" [value]="medico.rutMedico">{{ medico.medicoNombre }} {{ medico.idTipoCita }}  ({{ medico.hora_inicio }} - {{ medico.hora_fin }})</option>
+  </select>
+  
+  
+  </div>
+
+
+<!-- Al final de tu formulario -->
+<button type="submit" class="btn btn-primary">Guardar Cita</button>
+
+
+
+</form>
