--- a/src/app/admin/pages/gestionarCitasMedicas/gestionar-citas/gestionar-citas-medicas.component.html
+++ b/src/app/admin/pages/gestionarCitasMedicas/gestionar-citas/gestionar-citas-medicas.component.html
@@ -8,7 +8,7 @@
 
                 <input type="text"
                         class="form-control"
-                        placeholder="Buscar medico..."
+                        placeholder="Buscar Citas medica..."
                         #txtTermino
                         (keyup)="buscar( txtTermino.value )"/>
 
@@ -35,8 +35,8 @@
     <div class="col-12">
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title">Total de usuarios: </h4>
-                <h6 class="card-subtitle">Usuarios registrados en mi aplicacion</h6>
+                <h4 class="card-title">Total de Citas medica: </h4>
+                <h6 class="card-subtitle">Citas registrados en mi aplicacion</h6>
                 <div class="table-responsive">
                     <table class="table table-bordered">
                         <thead>
@@ -46,7 +46,7 @@
                                 <th>Paciente</th>
                                 <th>Medico</th>
                                 <th>Tipo_cita</th>
-                                <th>Estado</th>
+                
                                 <th>Hora_inicio</th>
                                 <th>Hora_fin</th>
                                 <th>Acciones</th>
@@ -59,8 +59,8 @@
                                 <td>{{ cita.fecha }}</td>
                                 <td>{{ cita.paciente.nombre }}</td>
                                 <td>{{ cita.medico.nombre }}</td>
-                           
-                                <td>{{ cita.estado }}</td>
+                                <td>{{ cita.motivo }}</td>
+           
                                 <td>{{ cita.hora_inicio }}</td>
                                 <td>{{ cita.hora_fin }}</td>
                                 <td class="text-nowrap text-center">
@@ -76,14 +76,7 @@
                         </tbody>
                     </table>
                 </div>
-                
-                <!--ESTA CONDICION SE HACE PARA QUE CUANDO SE TECLEA EN LA BARRA DE BUSQUEDA Y SE CARGAN LOS RESULTADOS DE BUSQUEDA DESAPARESCAN LOS BOTONES SIGUIENTES Y ANTERIOR EN LA PANTALLA-->
-                <div> <!--SI EL TERMINO ES IGUAL A 0 LOS BOTONES SIGUIENTE Y ANTERIOR SE VAN A MOSTRAR CASO CONTRARIO VAN A DESAPARECER-->
-                    <button  class="btn btn-secondary">Anteriores</button>
-                    &nbsp; <!--Esto es para que exista una pequeña separacion entre ambos-->
-                    <button  class="btn btn-secondary">Siguiente</button>
-                </div>
-            
+       
             </div>
         </div>
     </div>
