--- a/src/app/admin/pages/gestionarHorariosMedicos/gestionar-horarios-medicos/gestionar-horarios-medicos.component.html
+++ b/src/app/admin/pages/gestionarHorariosMedicos/gestionar-horarios-medicos/gestionar-horarios-medicos.component.html
@@ -1,19 +1,26 @@
-<div class="row animated fadeIn fast"
->
-    <div class="col-12">
-        <div class="card">
-            <div class="card-body">
+<div class="row animated fadeIn fast">
+  <div class="col-12">
+      <div class="card">
+          <div class="card-body">
 
-                <input type="text"
-                        class="form-control"
-                        placeholder="Buscar Horario..."
-                        #txtTermino
-                        (keyup)="buscar( txtTermino.value )"/>
-
+            <div class="alert alert-warning" role="alert">
+              Si ya tienes horarios con medicos registrados puedes crear una cita medica
+              <a href="/agregar-cita" class="btn btn-info"> Aqui</a>
             </div>
-        </div>
-    </div>
-</div> 
+
+              <!-- Mensaje destacado encima de la barra de búsqueda -->
+              <p style="font-weight: bold; color: #ff5733;">Buscar medicos por dia de trabajo ejemplo: lunes, martes, miercoles.....</p>
+
+              <input type="text"
+                     class="form-control"
+                     placeholder="Buscar medicos por dia de trabajo ejemplo: lunes, martes, miercoles....."
+                     #txtTermino
+                     (keyup)="buscar( txtTermino.value )"/>
+          </div>
+      </div>
+  </div>
+</div>
+
 
 <div class="container-fluid">
     <div class="row">
@@ -43,8 +50,8 @@
     <div class="col-12">
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title">Total de usuarios: </h4>
-                <h6 class="card-subtitle">Usuarios registrados en mi aplicacion</h6>
+                <h4 class="card-title">Horarios: ({{totalHorarios}}) </h4>
+                <h6 class="card-subtitle">Horarios registrados en mi aplicacion</h6>
                 <div class="table-responsive">
                     <table class="table table-bordered">
                       <thead>
@@ -53,13 +60,12 @@
                           <th>diaSemana</th>
                           <th>horaInicio</th>
                           <th>horaFinalizacion</th>
-                          <th>hora_inicio_colacion</th>
-                          <th>hora_fin_colacion</th>
-                          <th>duracionCitas</th>
+
                           
-                          <th>rutMedico</th>
+                          <th>Nombre medico</th>
+                          <th>Especialidad medica</th>
                           <th>disponibilidad</th>
-                          <th>fechaCreacion</th>
+                     
                           <th>Acciones</th>
                           <!-- Agrega más columnas según tus necesidades -->
                         </tr>
@@ -69,13 +75,12 @@
                           <td>{{ horario.diaSemana }}</td>
                           <td>{{ horario.horaInicio }}</td>
                           <td>{{ horario.horaFinalizacion }}</td>
-                          <td>{{ horario.hora_inicio_colacion }}</td>
-                          <td>{{ horario.hora_fin_colacion}}</td>
-                          <td>{{ horario.duracionCitas }}</td>
+ 
                           <td>{{ horario.medico.nombre }}</td>
+                          <td>{{ horario.medico.especialidad_medica }}</td>
                           
                           <td>{{ horario.disponibilidad }}</td>
-                          <td>{{ horario.fechaCreacion }}</td>
+                   
               
                           <!-- Aquí puedes agregar botones de acciones para cada médico -->
               <!--BOTON PARA BORRAR MEDICO-->
@@ -105,11 +110,11 @@
                     </table>
                   </div>
                 <!--ESTA CONDICION SE HACE PARA QUE CUANDO SE TECLEA EN LA BARRA DE BUSQUEDA Y SE CARGAN LOS RESULTADOS DE BUSQUEDA DESAPARESCAN LOS BOTONES SIGUIENTES Y ANTERIOR EN LA PANTALLA-->
-                <div> <!--SI EL TERMINO ES IGUAL A 0 LOS BOTONES SIGUIENTE Y ANTERIOR SE VAN A MOSTRAR CASO CONTRARIO VAN A DESAPARECER-->
-                    <button  class="btn btn-secondary">Anteriores</button>
-                    &nbsp; <!--Esto es para que exista una pequeña separacion entre ambos-->
-                    <button  class="btn btn-secondary">Siguiente</button>
-                </div>
+                <div *ngIf="txtTermino.value.length === 0"> <!--SI EL TERMINO ES IGUAL A 0 LOS BOTONES SIGUIENTE Y ANTERIOR SE VAN A MOSTRAR CASO CONTRARIO VAN A DESAPARECER-->
+                  <button (click)="cambiarPagina(-5)" class="btn btn-secondary">Anteriores</button>
+                  &nbsp; <!--Esto es para que exista una pequeña separacion entre ambos-->
+                  <button (click)="cambiarPagina(5)" class="btn btn-secondary">Siguiente</button>
+              </div>
             
             </div>
         </div>
