--- a/src/app/admin/pages/gestionar-pacientes/gestionar-pacientes/gestionar-pacientes.component.html
+++ b/src/app/admin/pages/gestionar-pacientes/gestionar-pacientes/gestionar-pacientes.component.html
@@ -6,6 +6,8 @@
         <div class="card">
             <div class="card-body">
 
+              <p style="font-weight: bold; color: #3336ff;">Buscar usuarios por nombre...</p>
+
                 <input type="text"
                         class="form-control"
                         placeholder="Buscar Usuario..."
