--- a/src/app/admin/pages/gestionarHorariosMedicos/gestionar-horarios-medicos/gestionar-horarios-medicos.component.html
+++ b/src/app/admin/pages/gestionarHorariosMedicos/gestionar-horarios-medicos/gestionar-horarios-medicos.component.html
@@ -9,7 +9,7 @@
             </div>
 
               <!-- Mensaje destacado encima de la barra de búsqueda -->
-              <p style="font-weight: bold; color: #ff5733;">Buscar medicos por dia de trabajo ejemplo: lunes, martes, miercoles.....</p>
+              <p style="font-weight: bold; color: #ff5733;">Buscar horarios medicos por dia de trabajo ejemplo: lunes, martes, miercoles.....</p>
 
               <input type="text"
                      class="form-control"
