--- a/src/app/pacientes/pages/agendar-cita/agendar-cita.component.html
+++ b/src/app/pacientes/pages/agendar-cita/agendar-cita.component.html
@@ -2,8 +2,11 @@
     <div class="row">
         <!-- Botón para agendar cita -->
         <div class="col-12 text-center mb-4">
-            <button class="btn btn-primary" routerLink="/formulario-cita">Agendar Cita Médica</button>
+            <button class="btn btn-primary custom-day" routerLink="/formulario-cita">Agendar Cita Médica</button>
         </div>
+
+        <!-- Título para los Horarios de la Clínica -->
+ 
 
         <!-- Rectángulos para días de la semana -->
         <div class="col-md-4">
