--- a/src/app/pacientes/pages/agendar-cita/agendar-cita.component.scss
+++ b/src/app/pacientes/pages/agendar-cita/agendar-cita.component.scss
@@ -1,3 +1,5 @@
+
+
 .custom-day {
     border: 1px solid #007BFF;  /* Color del borde azul (puedes cambiarlo según tus preferencias) */
     transition: background-color 0.3s, transform 0.3s;  /* Efectos suaves al pasar el mouse */
@@ -6,10 +8,13 @@
 }
 
 .custom-day:hover {
-    background-color: #e9ecef;  /* Color de fondo al pasar el mouse */
+    background-color: #1d446b;  /* Color de fondo al pasar el mouse */
     transform: scale(1.05);  /* Efecto de "zoom" al pasar el mouse */
 }
 
+.full-calendar-container {
+    height: 600px; // Ajusta la altura según sea necesario
+  }
 
 
 
