--- a/src/app/pacientes/pages/payment-success/payment-success.component.html
+++ b/src/app/pacientes/pages/payment-success/payment-success.component.html
@@ -1,1 +1,26 @@
-<p>payment-success works!</p>
+<!-- payment-success.component.html -->
+<div  *ngIf="detallesCita">
+    <h2>Detalles de la Cita</h2>
+    <p><strong>Motivo:</strong> {{ detallesCita.motivo }}</p>
+    <p><strong>Fecha:</strong> {{ detallesCita.fecha }}</p>
+    <p><strong>Hora de Inicio:</strong> {{ detallesCita.hora_inicio }}</p>
+    <p><strong>Hora de Fin:</strong> {{ detallesCita.hora_fin }}</p>
+    <p><strong>Estado:</strong> {{ detallesCita.estado }}</p>
+  
+    <h3>Información del Médico</h3>
+    <p><strong>Nombre:</strong> {{ detallesCita.medico.nombre }} {{ detallesCita.medico.apellidos }}</p>
+    <p><strong>Especialidad:</strong> {{ detallesCita.medico.especialidad_medica }}</p>
+  
+    <h3>Información del Paciente</h3>
+    <p><strong>Nombre:</strong> {{ detallesCita.paciente.nombre }} {{ detallesCita.paciente.apellidos }}</p>
+    <p><strong>Email:</strong> {{ detallesCita.paciente.email }}</p>
+  
+    <div *ngIf="detallesCita.factura">
+      <h3>Detalles de Facturación</h3>
+      <p><strong>Método de Pago:</strong> {{ detallesCita.factura.payment_method_id }}</p>
+      <p><strong>Monto Pagado:</strong> {{ detallesCita.factura.monto_pagado }}</p>
+      <p><strong>Estado del Pago:</strong> {{ detallesCita.factura.estado_pago }}</p>
+    </div>
+    <button (click)="imprimir()">Imprimir Detalles</button>
+  </div>
+  
